# MuditaOS

./: .gdbinit  .gdbinit-1051  .gdbinit-1051-clion  .gitignore  .gitmodules  CMakeLists.txt  StartJLinkServer.sh  Target_Linux.cmake  Target_Linux_clang.cmake  Target_RT1051.cmake  audioapi.cpp  audioapi.hpp  changelog.md  configure.sh  data.txt  dump.txt  extract.py  flash_eMMC.sh  generate_image.sh  in_docker.sh  log.txt  nums.txt  nums2.txt  test.py  test.sh  test.txt  test2.txt
.github/: CODEOWNERS
QA/: .gitignore  conftest.py
QA/tests/: test_call.py
QA/tools/: utils.py
board/linux/: CMakeLists.txt
cmake/modules/: AddVersionJson.cmake  Assets.cmake  DiskImage.cmake  Product.cmake  ProjectConfig.cmake  PureCoverage.cmake
config/: Utils.cmake  Version.cmake  VersionHpp.cmake  VersionJson.cmake  bootstrap_config  format-config.sh  version.json.cmake_template
host-tools/: CMakeLists.txt
host-tools/genlittlefs/: lfs_ioaccess.c
image/: CMakeLists.txt
module-apps/: Application.cpp  Application.hpp  CMakeLists.txt  GuiTimer.cpp  MVPContract.hpp  UiCommonActions.cpp  UiCommonActions.hpp
module-apps/application-alarm-clock/: ApplicationAlarmClock.cpp
module-apps/application-antenna/: ApplicationAntenna.hpp
module-apps/application-bell-powernap/: ApplicationBellPowerNap.cpp
module-audio/: CMakeLists.txt
module-bluetooth/: CMakeLists.txt
module-bluetooth/Bluetooth/: BluetoothStateMachine.hpp  BluetoothWorker.cpp  BluetoothWorker.hpp  BtCommand.hpp  BtKeysStorage.cpp  BtKeysStorage.hpp  BtstackWorker.cpp  CommandHandler.cpp  CommandHandler.hpp  WorkerController.cpp  btstack_config.h
module-bluetooth/Bluetooth/audio/: BluetoothAudioDevice.cpp
module-bluetooth/Bluetooth/command/: Command.cpp  Command.hpp  CommandData.hpp  DeviceData.cpp  DeviceData.hpp  OperatorNameData.cpp  OperatorNameData.hpp  PhoneNumberData.cpp  PhoneNumberData.hpp  SignalStrengthData.cpp  SignalStrengthData.hpp
module-bluetooth/Bluetooth/glucode/: BluetoothRunLoop.cpp  BluetoothRunLoop.hpp
module-bluetooth/Bluetooth/interface/: BluetoothDriverImpl.cpp
module-bluetooth/Bluetooth/interface/profiles/: CellularInterface.cpp  CellularInterface.hpp  GAP.cpp  PAN.cpp  Profile.hpp  ProfileManager.cpp  ProfileManager.hpp  SCO.cpp  SCO.hpp
module-bluetooth/Bluetooth/interface/profiles/A2DP/: A2DP.cpp  A2DP.hpp  A2DPImpl.hpp  AVDTP.hpp  AVRCP.cpp  AVRCP.hpp
module-bluetooth/Bluetooth/interface/profiles/GAP/: GAP.cpp
module-bluetooth/Bluetooth/interface/profiles/HFP/: HFP.cpp  HFP.hpp  HFPImpl.hpp
module-bluetooth/Bluetooth/interface/profiles/HSP/: HSP.cpp  HSP.hpp  HSPImpl.hpp  SCO.cpp  SCO.hpp  ScoUtils.cpp
module-bluetooth/Bluetooth/interface/profiles/SCO/: SCO.cpp  ScoUtils.cpp
module-bluetooth/lib/: btstack.cmake
module-bluetooth/tests/: tests-StatefulController.cpp  tests-command.cpp
module-bsp/: CMakeLists.txt
module-cellular/: CMakeLists.txt
module-db/: CMakeLists.txt
module-os/: CMakeLists.txt  CriticalSectionGuard.cpp  CriticalSectionGuard.hpp
module-platform/: CMakeLists.txt
module-platform/rt1051/: CMakeLists.txt
module-platform/rt1051/include/: RT1051Platform.hpp
module-platform/rt1051/src/: BlockDeviceFactory.cpp  BlockDeviceFactory.hpp  RT1051Platform.cpp
module-services/: CMakeLists.txt
module-services/service-bluetooth/: CMakeLists.txt  ServiceBluetooth.cpp
module-services/service-bluetooth/service-bluetooth/: BluetoothMessage.hpp  ServiceBluetooth.hpp  SettingsHolder.cpp  SettingsHolder.hpp
module-services/service-bluetooth/service-bluetooth/messages/: HSPSCOTrigger.hpp  RequestCellularData.hpp
module-utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
module-utils/log/: log.cpp  (+2 more)
module-vfs/: CMakeLists.txt  vfs-utils.cpp  vfs.cpp  vfs.hpp  vfsNotifier.cpp  vfsNotifier.hpp
source/: BusChannelsCustom.hpp  MessageType.hpp  main.cpp
test/: CMakeLists.txt  mock-logs.cpp  test_basic.py  ucs2_to_utf8.py
tools/: calc_mem_ussage.sh  check-deps.py  generate_image.sh  get_mem_ussage.sh
(+1006 files in other folders)
